testcases/valid_programs/1.ml

# 算术表达式

(define x 5)

(+ 100 100)

# 超过2个操作数相加
(+ 100 x x)

(- x 100)

(* 2 x)

(/ 100 2)

(+ (- x x) (* 5 2 4 (+ 1 2))) # 复合表达式