testcases/ill_formed/1.ml
# 括号数量不匹配

(define x 5))

+ (- 100 100) 200 x)

((define x 5))
    if (< x 5)
        1
        2
)